--- a/html/home.html
+++ b/html/home.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body class="bg-dark text-light">
-    <header>
-        <div class="navbar justify-content-start d-flex justify-content-between bg-light text-dark px-5">
-            <h1 class="fw-bold">Game Library</h1>
-            <button type="button" class="btn btn-primary btn-lg x-5 y-4" data-bs-toggle="offcanvas" data-bs-target="#cartView" aria-controls="cartView">
+    <header class="row">
+        <div class="navbar justify-content-start d-flex justify-content-between bg-light text-dark px-5 px-sm-3">
+            <h1 class="fw-bold col-sm-10">Game Library</h1>
+            <button type="button" class="btn btn-primary btn-lg x-5 y-4 col-sm-2" data-bs-toggle="offcanvas" data-bs-target="#cartView" aria-controls="cartView">
                 <i class="bi bi-cart3"></i>
             </button>
         </div>
@@ -26,21 +26,29 @@
                 <div id="cartContents" class="list-group">
                 </div>
             </ul>
+            <div class="offcanvas-footer position-absolute bottom-0 end-0">
+                <button class="btn btn-lg btn-danger m-2" onclick="trashCart()"><i class="bi bi-trash3"></i> Trash Cart</button>
+            </div>
         </div>
     </div>
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-sm-12 col-md-7">
                 <h2>Welcome to our game library!</h2>
                 <p class="fw-bold">Here you can find a wide selection of games to play and enjoy.</p>
             </div>
+            <div class="col-sm-12 col-md-5">
+                <div>
+                  <button class="btn btn-lg btn-secondary w-100" data-bs-toggle="modal" data-bs-target="#gameAdd_window">Add Game to Library</button>
+                </div>
+            </div>
         </div>
         <!--Games Library Cards-->
-        <div class="row d-flex flex-row">
+        <div class="row d-flex flex-row gy-4 gx-3">
             <div class="col-12 col-md-4">
-                <div id="game_413150" class="card h-100">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/413150/header.jpg" alt="">
+                <div id="game_413150" class="card">
+                    <img class="" src="https://cdn.cloudflare.steamstatic.com/steam/apps/413150/header.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title fw-bold text-uppercase">Stardew Valley</h3>
                         <p class="card-text">You've inherited your grandfather's old farm plot in Stardew Valley. Armed with hand-me-down tools and a few coins, you set out to begin your new life. Can you learn to live off the land and turn these overgrown fields into a thriving home?</p>
@@ -52,8 +60,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div id="game_945360" class="card h-100">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/945360/header.jpg" alt="">
+                <div id="game_945360" class="card">
+                    <img class="" src="https://cdn.cloudflare.steamstatic.com/steam/apps/945360/header.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title fw-bold text-uppercase">Among Us</h3>
                         <p class="card-text">An online and local party game of teamwork and betrayal for 4-15 players...in space!</p>
@@ -65,8 +73,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div id="game_1145360" class="card h-100">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1145360/header.jpg" alt="">
+                <div id="game_1145360" class="card">
+                    <img class="" src="https://cdn.cloudflare.steamstatic.com/steam/apps/1145360/header.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title fw-bold text-uppercase">Hades</h3>
                         <p class="card-text">Defy the god of the dead as you hack and slash out of the Underworld in this rogue-like dungeon crawler from the creators of Bastion, Transistor, and myre.</p>
@@ -78,8 +86,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div id="game_367520" class="card h-100">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/367520/header.jpg" alt="">
+                <div id="game_367520" class="card">
+                    <img class="" src="https://cdn.cloudflare.steamstatic.com/steam/apps/367520/header.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title fw-bold text-uppercase">Hollow Knight</h3>
                         <p class="card-text">Forge your own path in Hollow Knight! An epic action adventure through a vast ruined kingdom of insects and heroes. Explore twisting caverns, battle tainted creatures and befriend bizarre bugs, all in a classic, hand-drawn 2D style.</p>
@@ -91,8 +99,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-4">
-                <div id="game_620" class="card h-100">
-                    <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/620/header.jpg" alt="">
+                <div id="game_620" class="card">
+                    <img class="" src="https://cdn.cloudflare.steamstatic.com/steam/apps/620/header.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title fw-bold text-uppercase">Portal 2</h3>
                         <p class="card-text">The &quot;Perpetual Testing Initiative&quot; has been expanded to allow you to design co-op puzzles for you and your friends!</p>
@@ -105,6 +113,25 @@
             </div>
         </div>
         <!--Modals-->
+        <div class="modal fade" id="gameAdd_window" tabindex="-1" aria-labelledby="gameAdd_window_label" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content bg-dark">
+                <div class="modal-header">
+                  <h1 class="modal-title" id="gameAdd_window_label">Add a Steam Game</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="mb-3">
+                      <label for="gameIdInput" class="form-label">Game ID:</label>
+                      <input type="text" class="form-control" id="gameIdInput" placeholder="Enter game ID">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add Game</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         <div class="modal fade" id="game_413150_details_window" tabindex="-1" aria-labelledby="game_413150_details_window_label" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered">
               <div class="modal-content bg-dark">
@@ -113,10 +140,10 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <div class="ratio ratio-16x9">
+                    <!-- <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ot7uXNQskhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                    <ul class="list-group ist-group-flush">
+                    </div> -->
+                    <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Indie</li>
                         <li class="list-group-item"><strong>Developer</strong>: ConcernedApe</li>
                         <li class="list-group-item"><strong>Publisher</strong>: ConcernedApe</li>
@@ -137,9 +164,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <div class="ratio ratio-16x9">
+                    <!-- <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NSJ4cESNQfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Casual</li>
                         <li class="list-group-item"><strong>Developer</strong>: Innersloth</li>
@@ -160,9 +187,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <div class="ratio ratio-16x9">
+                    <!-- <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/91t0ha9x0AE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Supergiant Games</li>
@@ -183,9 +210,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <div class="ratio ratio-16x9">
+                    <!-- <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Team Cherry</li>
@@ -206,15 +233,15 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <div class="ratio ratio-16x9">
+                    <!-- <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tax4e4hBBZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
+                    </div> -->
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Valve</li>
                         <li class="list-group-item"><strong>Publisher</strong>: Valve</li>
                         <li class="list-group-item"><strong>Metacritic Rating</strong>: 95</li>
-                        <li class="list-group-item"><strong>Platform</strong>: windows, mac, linux, </li>
+                        <li class="list-group-item"><strong>Platform</strong>: Windows, macOS, Linux</li>
                         <li class="list-group-item"><strong>Language</strong>: English<strong>*</strong>, French<strong>*</strong>, German<strong>*</strong>, Spanish - Spain<strong>*</strong>, Czech, Danish, Dutch, Finnish, Hungarian, Italian, Japanese, Korean, Norwegian, Polish, Portuguese - Portugal, Romanian, Russian<strong>*</strong>, Simplified Chinese, Swedish, Thai, Traditional Chinese, Turkish, Bulgarian, Greek, Portuguese - Brazil, Spanish - Latin America, Ukrainian<br><strong>*</strong>languages with full audio support</li>
                         </ul>
                 </div>
@@ -222,8 +249,6 @@
             </div>
           </div>
     </div>
-    
-
     <!--Toast-->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
         <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -236,7 +261,6 @@
         </div>
         </div>
     </div>
-
     <footer class="pt-2 text-center">
         <p>&copy; 2023 Game Library</p>
     </footer>
