--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/glV2/html/home.html">
+    <meta http-equiv="refresh" content="0; url=./html/home.html">
   </head>
   <body>
   </body>
