--- a/html/home.html
+++ b/html/home.html
@@ -141,9 +141,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <!-- <div class="ratio ratio-16x9">
+                    <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ot7uXNQskhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Indie</li>
                         <li class="list-group-item"><strong>Developer</strong>: ConcernedApe</li>
@@ -165,9 +165,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <!-- <div class="ratio ratio-16x9">
+                    <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NSJ4cESNQfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Casual</li>
                         <li class="list-group-item"><strong>Developer</strong>: Innersloth</li>
@@ -188,9 +188,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <!-- <div class="ratio ratio-16x9">
+                    <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/91t0ha9x0AE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Supergiant Games</li>
@@ -211,9 +211,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <!-- <div class="ratio ratio-16x9">
+                    <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Team Cherry</li>
@@ -234,9 +234,9 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-center">
-                    <!-- <div class="ratio ratio-16x9">
+                    <div class="ratio ratio-16x9">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/tax4e4hBBZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div> -->
+                    </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
                         <li class="list-group-item"><strong>Developer</strong>: Valve</li>
