Start nodejs implementation

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ot7uXNQskhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/ot7uXNQskhs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe loading="lazy">
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Indie</li>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NSJ4cESNQfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/NSJ4cESNQfE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe loading="lazy">
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Casual</li>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/91t0ha9x0AE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/91t0ha9x0AE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe loading="lazy">
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/UAO2urG23S4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe loading="lazy">
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <div class="ratio ratio-16x9">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tax4e4hBBZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/tax4e4hBBZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe loading="lazy">
                     </div>
                     <ul class="list-group">
                         <li class="list-group-item"><strong>Genre</strong>: Action</li>
