Starting with no node

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -13,6 +13,7 @@
             <h1 class="fw-bold col-sm-10"><i class="bi bi-dpad-fill"></i> GamifyLib</h1>
             <button type="button" class="btn btn-primary btn-lg x-5 y-4 col-sm-2" data-bs-toggle="offcanvas" data-bs-target="#cartView" aria-controls="cartView">
                 <i class="bi bi-cart3"></i>
+                <span id="itemCount" class="badge bg-success">0</span>
             </button>
         </div>
     </header>
