--- a/public/html/home.html
+++ b/public/html/home.html
@@ -47,8 +47,8 @@
             </div>
         </div>
         <!--Games Library Cards-->
-        <div class="row row-cols-1 row-cols-md-3 d-flex flex-row gy-4 gx-3">
-            <div id="games-container" class="w-100">
+        <div class="row d-flex flex-row gy-4 gx-3">
+            <div id="games-container" class="">
             </div>
         </div>
         <!--Modals-->
